welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:18: error: illegal start of simple expression
if( (a+b == b + 2*c + a + 10)))
                              ^